--- a/wmDemo/pom.xml
+++ b/wmDemo/pom.xml
@@ -47,6 +47,11 @@
 			<artifactId>fastjson</artifactId>
 			<version>1.2.69</version>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
